# duckdb-mpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: mpp_client.cpp  mpp_extension.cpp  mpp_server.cpp  mpp_service.cpp  remote_query_result.cpp
src/common/: endpoint.cpp  hash.cpp
src/execution/: mpp_physical_delete.cpp  mpp_physical_insert.cpp  mpp_physical_update.cpp  mpp_plan_delete.cpp  mpp_plan_insert.cpp  mpp_plan_update.cpp  physical_shuffle_write.cpp
src/function/: create_distributed_table.cpp  master_add_node.cpp  mpp_table_scan.cpp  prune_shards.cpp  remote_query.cpp  shuffle_read.cpp
src/include/: iterator.hpp  mpp_client.hpp  mpp_extension.hpp  mpp_server.hpp  mpp_service.hpp  remote_query_result.hpp
src/include/common/: blocking_queue.hpp  constants.hpp  distributed_table_info.hpp  endpoint.hpp  expression_helper.hpp  hash.hpp  serializer.hpp  string_view.hpp
src/include/execution/: mpp_physical_delete.hpp  mpp_physical_insert.hpp  mpp_physical_update.hpp  physical_shuffle_write.hpp
src/include/function/: create_distributed_table.hpp  master_add_node.hpp  mpp_table_scan.hpp  prune_shards.hpp  remote_query.hpp  shuffle_read.hpp
src/include/parser/: mpp_parse_data.hpp  mpp_parser_extension.hpp  partition_method.hpp
src/include/shuffle/: shuffle_manager.hpp  simple_shuffle_manager.hpp
src/include/storage/: mpp_catalog.hpp  mpp_catalog_utils.hpp  mpp_nodes.hpp  mpp_schema_entry.hpp  mpp_shard_info.hpp  mpp_shards.hpp  mpp_storage_extension.hpp  mpp_system_table.hpp  mpp_table_entry.hpp  mpp_tables.hpp  mpp_transaction.hpp  mpp_transaction_manager.hpp
src/parser/: mpp_parse_data.cpp  mpp_parser_extension.cpp  partition_method.cpp
src/proto/: mpp.proto
src/shuffle/: shuffle_manager.cpp  simple_shuffle_manager.cpp
src/storage/: mpp_catalog.cpp  mpp_nodes.cpp  mpp_schema_entry.cpp  mpp_shards.cpp  mpp_storage_extension.cpp  mpp_system_table.cpp  mpp_table_entry.cpp  mpp_tables.cpp  mpp_transaction.cpp  mpp_transaction_manager.cpp
test/sql/: mpp.test  mpp_delete.test  mpp_filter.test  mpp_transaction.test  mpp_update.test
